--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,34 @@
-<h1>Home</h1>
+<h1>Waldo!</h1>
+
+
+<% if !current_user %>
+	<p>Please log in to play</p>
+<% else %>
+	<p>Select a station to begin</p>
+	<form action="/" method="post">
+		<select name="station">
+			<% @stations.each do |station| %>
+				<option value="<%= station.abbr %>"><%= station.station_name %></option>
+			<% end %>
+		</select>
+		<br><br>
+		<input type="submit">
+		<br><br>
+	</form>
+<% end %>
+
+<% if @departures %>
+	<p>Great. Now, which train are you waiting for?</p>
+	<form action="/games" method="post">
+		<select name="train">
+			<% @departures.each do |dep| %>
+				<option value="<%= find_by_fullname(dep.first) %>"><%= dep.first %></option>
+			<% end %>
+		</select>
+		<br><br>
+		<label for="waldo_desc">and finally add a brief visual description of yourself</label>
+		<input type="text" name="waldo_desc">
+		<input type="hidden" name="station_at" value="<%= @station_at %>">
+		<input type="submit">
+	</form>
+<% end %>
