Add countdown functionality

--- a/app/views/games/show.erb
+++ b/app/views/games/show.erb
@@ -1,6 +1,17 @@
 <div class="main-show">
-	<h2><%= @game.ends_at %></h2>
-	<h2><%= @game.active %></h2>
+	<% if @game.waldo_id == current_user.id %>
+		<h2>You're Waldo! Don't get caught</h2>
+		<p>..but if they find you, tell them: <%= @game.waldo_key %></p>
+	<% else %>
+		<h2>Find Waldo!</h2>
+		<p>Waldo's Description: <%= @game.waldo_description %></p>
+		<p>if you succeed, enter your code here: </p>
+		<form method='post' action="/games/<%= @game.id %>">
+			<input type="hidden" name="_method" value="put">
+			<input type="text" name="code">
+			<input type="submit" name="submit">
+		</form>
+	<% end %>
 	
 	<div class="wrapper">
 	  <div class="cell">
